<resources>
    <string name="app_name">Project2</string>
    <string name="titlep1">Legally Distinct</string>
    <string name="titlep2">Pocket Monster</string>
    <string name="loginButton">Login</string>
    <string name="SignUp">Sign-Up</string>
    <string name="changeTeamText">Change Team</string>
    <string name="optionText">Please Select Option</string>
    <string name="fightButtonText">Fight</string>
    <string name="change_team">Change Team</string>
    <string name="helloUserText">Hello User!</string>
    <string name="BeastBrawlText">Beast Brawl</string>
    <string name="animalArenaText">Animal Arena</string>
    <string name="attributeValue">Change Attributes</string>
    <string name="healthText">HP</string>
    <string name="beastRecycleView">HP</string>
    <color name="peach">#FFE5CA</color>


</resources>