<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/peach">


    <EditText
        android:id="@+id/passWordEditTextSignUp"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <EditText
        android:id="@+id/passWordEditAgainText"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="Password Again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordEditTextSignUp" />

    <TextView
        android:id="@+id/titlep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlep1"
        android:textColor="#3A3A3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/titlep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Sign Up"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/titlep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/titlep2"
        android:textColor="#3A3A3A"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/titlep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlep1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="#FA9884"
        android:gravity="center"
        android:text="@string/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="518dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlep" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="79dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/wolf"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="518dp" />

</androidx.constraintlayout.widget.ConstraintLayout>